test/scc_test/exp/semantic-errors/007.t
void test()
{
    const int a;
    ++a;
}